added css for sizing of logo and changed column layout for header

--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,11 @@ body {
   background-size: cover;
   background-position: center center;
 }
+
+.smile {
+  height: 30PX;
+}
+
+.smile-school {
+  height: 30px;
+}
