made text bold and added correct color for button

--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,10 @@
   width: 150px;
 }
 
-.weather {
+.weather,
+.homepage-hero .btn-success {
   background-color: #C271FF;
+  border: #C271FF;
 }
 
 .weather a img,
