--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,27 @@
 /* .homepage-hero .card-columns .card {
   width: 150px;
 } */
+
+.video h3 {
+  color: #071629;
+
+  font-family: "Source Sans Pro";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.video p {
+  color: rgba(7, 22, 41, 0.50);
+
+  font-family: "Source Sans Pro";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.video .xs-img {
+  width: 30px;
+}
