sized smile correctly

--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,12 @@
 .video .text-purple {
   color:#C271FF;
 }
+
+/* .video .img-text {
+  width: 242px;
+  height: 48;
+} */
+
+.membership .smile_on-area {
+  width: 45px;
+}
