made more adjustments to button focus mode. looks good!

--- a/styles.css
+++ b/styles.css
@@ -37,14 +37,23 @@
 
 .weather,
 .homepage-hero .btn-success,
-.membership .btn-success,
+.membership .btn-success {
+  background-color: #C271FF;
+  border: #C271FF;
+}
+
 .homepage-hero .btn-success:hover,
 .membership .btn-success:hover,
 .homepage-hero .btn-success:active,
-.homepage-hero .btn-success:focus,
 .membership .btn-success:active {
   background-color: #C271FF;
-  border: #C271FF;
+  opacity: 0.9;
+  border: none;
+}
+
+.homepage-hero .btn-success:focus,
+.membership .btn-success:focus {
+  background-color: #C271FF;
 }
 
 .weather a img,
