--- a/styles.css
+++ b/styles.css
@@ -136,3 +136,7 @@ footer {
   background-size: cover;
   background-position: center center;
 }
+
+.row-divider {
+  border-bottom: 1px solid #a8a8a8;
+}
