--- a/styles.css
+++ b/styles.css
@@ -167,3 +167,18 @@ footer {
 .input-bg {
   background-color: #b57be1;
 }
+
+.image-container {
+  position: relative;
+  /* display: inline-block; */
+}
+
+.play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  align-items: center;
+  justify-content: center;
+}
